2025-05-04T02:18:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14816768603 # 633
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-04
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 227 261 / 230 264
* notice: next accum: outdated-unq outdated-all / unq all: 228 262 / 230 264
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-19] / []

2025-04-28T02:05:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14698717010 # 627
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-28
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 227 261 / 229 263
* notice: next accum: outdated-unq outdated-all / unq all: 227 261 / 230 264
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-27]

2025-04-23T02:01:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14608322052 # 622
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-23
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 227 261 / 228 262
* notice: next accum: outdated-unq outdated-all / unq all: 227 261 / 229 263
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-22]

2025-04-20T02:06:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14554987336 # 619