@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-04T02:18:13Z",
-  "count_outdated" : 262,
-  "uniques_outdated" : 228,
+  "timestamp" : "2025-05-07T02:04:38Z",
+  "count_outdated" : 263,
+  "uniques_outdated" : 229,
   "count" : 264,
   "uniques" : 230,
   "clones" : [
-    {
-      "timestamp": "2025-04-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-27T00:00:00Z",
       "count": 1,
